# majKDSG_agari_pattern

./: CMakeLists.txt  readMe.md  result.csv  result_not_included_F4_F6_csv
app/: CMakeLists.txt  agari_tensuu_name.cpp  agari_vector.cpp  main.cpp
include/: agari_tensuu_name.h  agari_vector.h
qml/: Main.qml
tests/: CMakeLists.txt  test_agari_tensuu_name.cpp  test_main.cpp
